--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,2 +1,14 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
+
+@import 'navbar';
+
+.btn-info {
+  color: white;
+}
+
+.btn-outline-info {
+  &:hover {
+    color: white;
+  }
+}
